align features correctly

--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,10 @@ h3 {
   padding: 15px 25px;
 }
 
+.extra-padding-top {
+  padding: 0 25px 15px 25px;
+}
+
 .content {
   margin: 20px 0;
 }
